style.css
/* ... */
      .main-navigation .menu .menu-item a {
        display: block;
        padding: 5px 20px;
        background: #756096;
        background: -webkit-linear-gradient(#756096, #655382);
        background: linear-gradient(#756096, #655382);
        color: #c3b8d4;
        border-radius: 30px;
        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2); }
      .main-navigation .menu .menu-item:hover a, .main-navigation .menu .menu-item:active a, .main-navigation .menu .menu-item.current-menu-item a {
        background: #ecb540;
        background: -webkit-linear-gradient(#ecb540, #ec8940);
        background: linear-gradient(#ecb540, #ec8940);
        color: #86450c; }

.mobile-navigation {
  clear: both;
  display: none;
  padding: 30px 0; }
  @media screen and (min-width: 991px) {
    .mobile-navigation {
      display: none !important; } }
  .mobile-navigation .menu {
    list-style: none;
    background: #312048;
    border-radius: 10px;
    text-align: center;
    overflow: hidden; }
    .mobile-navigation .menu a {
      color: white;
      padding: 20px;
      display: block; }
    .mobile-navigation .menu .current-menu-item a {
      background: #ecb540;
      background: -webkit-linear-gradient(#ecb540, #ec8940);
      background: linear-gradient(#ecb540, #ec8940);
      color: #86450c; }

.hero {
  position: relative; }
  .hero .slides {
    list-style: none;
    *zoom: 1; }
    .hero .slides:after {
      content: " ";
      clear: both;
      display: block;
      overflow: hidden;
      height: 0; }
    .hero .slides li {
      min-height: 700px;
      width: 100%;
      float: left;
      margin-right: -100%;
      padding-top: 250px;
      padding-bottom: 100px;
      background-size: cover; }
    .hero .slides .slide-content {
      text-align: center;
      color: #2b2727; }
    .hero .slides .slide-title {
      font-size: 60px;
      font-size: 4.2857142857em;
      color: #ecb540; }
    .hero .slides .date {
      font-size: 30px;
      font-size: 2.1428571429em;
      display: block;
      margin: 30px 0; }
    .hero .slides p {
      font-size: 18px;
      font-size: 1.2857142857em;
      color: #aea1c3; }
  .hero .flex-control-nav {
    position: absolute;
    list-style: none;
    text-align: center;
    bottom: 30px;
    width: 100%;
    z-index: 99; }
    .hero .flex-control-nav li {
      display: inline-block;
      margin: 0 5px; }
    .hero .flex-control-nav a {
      width: 25px;
      height: 25px;
      position: relative;
      border-radius: 50%;
      display: block;
      background: #1a1129;
      overflow: hidden;
      text-indent: -999px;
      cursor: pointer; }
      .hero .flex-control-nav a:before {
        content: " ";
        width: 17px;
        height: 17px;
        border-radius: 50%;
        background: #ecb540;
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        margin: auto;
        -webkit-transition: .3s ease;
                transition: .3s ease;
        -webkit-transform: scale(0);
            -ms-transform: scale(0);
                transform: scale(0);
        opacity: 0; }
      .hero .flex-control-nav a.flex-active:before {
        opacity: 1;
        -webkit-transform: scale(1);
            -ms-transform: scale(1);
                transform: scale(1); }

.fullwidth-block {
  padding: 50px 0; }
  .fullwidth-block .section-title {
    font-size: 48px;
    font-size: 3.4285714286em;
    color: #4a3173;
    text-align: center; }
  .fullwidth-block .section-intro {
    text-align: center;
    font-size: 18px;
    font-size: 1.2857142857em;
    color: #aea1c3;
    margin-bottom: 30px; }
  .fullwidth-block[data-bg-image] .section-title, .fullwidth-block[data-bg-color] .section-title {
    color: white; }
  .fullwidth-block h3.section-title {
    text-align: left;
    font-size: 40px;
    font-size: 2.8571428571em; }

/*
 * Footer Styles
 */

